--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     <link href="/css/nav.css" rel="stylesheet">
     <link href="/css/footer.css" rel="stylesheet">
     <link href="/css/ball-rolling.css" rel="stylesheet">
+    <link href="/css/page.css" rel="stylesheet">
     <link href="/css/home.css" rel="stylesheet">
     <!--
     <link href="/css/base.css" rel="stylesheet">
@@ -107,16 +108,16 @@
             <div class="collapse navbar-collapse">
                 <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Home</a>
+                        <a class="nav-link" href="/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Request Tutor</a>
+                        <a class="nav-link" href="/request-tutor/">Request Tutor</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link" href="/about/">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="/contact/">Contact</a>
                     </li>
                 </ul>
 
