--- a/request-tutor/index.html
+++ b/request-tutor/index.html
@@ -53,7 +53,10 @@
     <link href="/css/nav.css" rel="stylesheet">
     -->
     <!--<link href="/css/share.css" rel="stylesheet"> -->
-
+     <link href="/css/contact.css" rel="stylesheet">
+     <link href="/css/contact-extra.css" rel="stylesheet">
+     <link href="/css/request-tutor.css" rel="stylesheet">
+ 
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 <!--[if lt IE 9]>
@@ -146,28 +149,111 @@
             <div class="row">
                 <div class="col-xl-12">
                 <p>Give us an idea of what you are looking for and we will get back to you very shortly</p>
+                <form name="sentMessage" id="contactForm" novalidate>
+                <div class="form-row">
+                    <div class="col">
+                        <div class="control-group">
+                            <div class="form-group floating-label-form-group controls">
+                                <label>School subjects your want your tutor to cover</label>
+                                <input type="text" class="form-control" placeholder="School Subjects" id="subjects" required data-validation-required-message="Please enter the student's school subjects.">
+                                <p class="help-block text-danger"></p>
+                            </div>
+                        </div>
+                     </div>
+                    <div class="col">
+                        <div class="control-group">
+                            <div class="form-group floating-label-form-group controls">
+                                <label>Your Town or Postcode</label>
+                                <input type="text" class="form-control" placeholder="Town or Postcode" id="location"  required data-validation-required-message="Please enter your town or postcode.">
+                                <p class="help-block text-danger"></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
-                <form class="request-tutor">
-                    <div class="form-row">
+                <div class="form-row">
                     <div class="col">
-                        <input type="text" class="form-control" placeholder="Age Range of Student(s)">
-                        <input type="text" class="form-control" placeholder="Days and Times Required">
-                        <input type="text" class="form-control" placeholder="Your Email (Required)">
+                        <div class="control-group group-outline">
+                            <label class="group-label">How many lessons are you looking for?</label>
+                            <div class="form-group controls">
+                                <div class="form-check form-check-inline">
+                                    <label class="form-check-label" for="one-off">One Off</label>
+                                    <input type="radio" class="form-control form-check-input" id="one-off">
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <label class="form-check-label" for="regular">Regular</label>
+                                    <input type="radio" class="form-control form-check-input" id="regular">
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
+                </div>
+
+                <div class="form-row">
                     <div class="col">
-                        <input type="text" class="form-control" placeholder="School Subjects To Cover">
-                        <input type="text" class="form-control" placeholder="Your Town or Postcode">
-                        <input type="text" class="form-control" placeholder="Your Name (Required)">
-                    </div>
-                    </div>
-                    <div class="form-row">
+                        <div class="control-group">
+                            <div class="form-group floating-label-form-group controls">
+                                <label>First Name</label>
+                                <input type="text" class="form-control" placeholder="First Name" id="first-name" required data-validation-required-message="Please enter your first name.">
+                                <p class="help-block text-danger"></p>
+                            </div>
+                        </div>
+                     </div>
                     <div class="col">
-                        <textarea class="form-control" placeholder="Message"></textarea>
-                        <input type="submit" value="Send" class="btn btn-primary btn-blue">
+                        <div class="control-group">
+                            <div class="form-group floating-label-form-group controls">
+                                <label>Last Name</label>
+                                <input type="text" class="form-control" placeholder="Last Name" id="last-name" required data-validation-required-message="Please enter your last name.">
+                                <p class="help-block text-danger"></p>
+                            </div>
+                        </div>
                     </div>
-                
+                </div>
+
+                <div class="form-row">
+                    <div class="col">
+                        <div class="control-group">
+                            <div class="form-group floating-label-form-group controls">
+                                <label>Phone Number</label>
+                                <input type="tel" class="form-control" placeholder="Phone Number" id="phone">
+                                 <p class="help-block text-danger"></p>
+                            </div>
+                        </div>
+                     </div>
+                    <div class="col">
+                        <div class="control-group">
+                            <div class="form-group floating-label-form-group controls">
+                                <label>Email Address</label>
+                                <input type="email" class="form-control" placeholder="Email Address" id="email" required data-validation-required-message="Please enter your email address.">
+                                <p class="help-block text-danger"></p>
+                            </div>
+                        </div>
                     </div>
-                </form>
+                </div>
+
+
+
+
+                <div class="control-group">
+                <div class="form-group controls">
+                    <label>Extra Details</label>
+                    <textarea rows="5" class="form-control" placeholder="Be sure to tell the tutor what you are looking for. Include:
+                    - What age and level is the learner?
+                    - Why you are seeking a tutor.... for exams, an essay or for the fun of learning?
+                    - When and where you would like lessons?" id="message" required data-validation-required-message="Please enter a message."></textarea>
+                    <p class="help-block text-danger"></p>
+                </div>
+                </div>
+                <br>
+                <div id="success"></div>
+                <div class="form-group feature">
+                <button type="submit" class="btn btn-primary btn-blue" id="sendMessageButton">Send
+                <span class="arrow">&gt;</span>
+                </button>
+                </div>
+            </form>
                 </div>
             </div>
         </div>
@@ -227,5 +313,7 @@
     </footer>
     <script src="/vendor/jquery/jquery.min.js"></script>
     <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    </body>
+                        <script src="/js/jqBootstrapValidation.js"></script>
+                    <script src="/js/tutor_me.js"></script>
+            </body>
 </html>
