--- a/request-tutor/index.html
+++ b/request-tutor/index.html
@@ -145,11 +145,16 @@
       </div>
     </header>
     <div class="page-content">
-        <div class="container">
+                <div class="container narrow-form">
             <div class="row">
                 <div class="col-xl-12">
-                <p>Give us an idea of what you are looking for and we will get back to you very shortly</p>
+               
                 <form name="sentMessage" id="contactForm" novalidate>
+                <div class="form-row">
+                    <div class="col">
+                        <p>Give us an idea of what you are looking for and we will get back to you very shortly</p>
+                    </div>
+                </div>
                 <div class="form-row">
                     <div class="col">
                         <div class="control-group">
@@ -178,14 +183,45 @@
                             <div class="form-group controls">
                                 <div class="form-check form-check-inline">
                                     <label class="form-check-label" for="one-off">One Off</label>
-                                    <input type="radio" class="form-control form-check-input" id="one-off">
+                                    <input type="radio" name="frequency" class="form-control form-check-input" id="one-off" value="one off">
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div class="form-check form-check-inline">
                                     <label class="form-check-label" for="regular">Regular</label>
-                                    <input type="radio" class="form-control form-check-input" id="regular">
+                                    <input type="radio" name="frequency" class="form-control form-check-input" id="regular" value="regular">
                                     <p class="help-block text-danger"></p>
                                 </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="control-group group-outline">
+                            <label class="group-label">Online tutoring or at your home</label>
+                            <div class="form-group controls">
+                                <div class="form-check form-check-inline">
+                                    <label class="form-check-label" for="online">Online</label>
+                                    <input type="radio" name="delivery" class="form-control form-check-input" id="online" value="online">
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <label class="form-check-label" for="home">At my home</label>
+                                    <input type="radio" name="delivery" class="form-control form-check-input" id="home" value="home">
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="col">
+                        <div class="control-group">
+                            <div class="form-group controls">
+                                <label>Extra Details</label>
+                                <textarea rows="7" class="form-control" placeholder="Be sure to tell the tutor what you are looking for. Include:
+                                - What age and level is the learner?
+                                - Why you are seeking a tutor.... for exams, an essay or for the fun of learning?
+                                - When and where you would like lessons?" id="message" required data-validation-required-message="Please enter a message."></textarea>
+                                <p class="help-block text-danger"></p>
                             </div>
                         </div>
                     </div>
@@ -233,31 +269,22 @@
                     </div>
                 </div>
 
-
-
-
-                <div class="control-group">
-                <div class="form-group controls">
-                    <label>Extra Details</label>
-                    <textarea rows="5" class="form-control" placeholder="Be sure to tell the tutor what you are looking for. Include:
-                    - What age and level is the learner?
-                    - Why you are seeking a tutor.... for exams, an essay or for the fun of learning?
-                    - When and where you would like lessons?" id="message" required data-validation-required-message="Please enter a message."></textarea>
-                    <p class="help-block text-danger"></p>
-                </div>
-                </div>
                 <br>
-                <div id="success"></div>
-                <div class="form-group feature">
-                <button type="submit" class="btn btn-primary btn-blue" id="sendMessageButton">Send
-                <span class="arrow">&gt;</span>
-                </button>
+                
+                <div class="form-row">
+                    <div class="col">
+                    <div id="success"></div>
+                            <div class="form-group feature">
+                                <button type="submit" class="btn btn-primary btn-blue" id="sendMessageButton">Send
+                                    <span class="arrow">&gt;</span>
+                                </button>
+                            </div>
+                    </div>
                 </div>
             </form>
                 </div>
             </div>
-        </div>
-    </div>
+        </div>    </div>
     <!-- Footer -->
         <!-- Footer -->
     <footer class="footer">
