--- a/request-tutor/index.html
+++ b/request-tutor/index.html
@@ -46,6 +46,7 @@
     <link href="/css/ball-rolling.css" rel="stylesheet">
     <link href="/css/page.css" rel="stylesheet">
     <link href="/css/home.css" rel="stylesheet">
+    <link href="/css/search.css" rel="stylesheet">
     <!--
     <link href="/css/base.css" rel="stylesheet">
     <link href="/css/blog.css" rel="stylesheet">
@@ -92,8 +93,8 @@
             </ul>
             <ul class="navbar-nav pull-right search">																		
                 <li class="nav-item">
-                    <form class="form-inline">
-                        <input class="form-control" type="search">
+                    <form class="form-inline search-form">
+                        <input class="form-control" placeholder="Search..." type="search">
                         <button class="btn-search" type="submit">
                         <i class="fa fa-search"></i>
                         </button>
@@ -340,6 +341,7 @@
     </footer>
     <script src="/vendor/jquery/jquery.min.js"></script>
     <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+     <script src="/js/main.js"></script>
                         <script src="/js/jqBootstrapValidation.js"></script>
                     <script src="/js/tutor_me.js"></script>
             </body>
