Privacy policy and cookie consent

--- a/contact/index.html
+++ b/contact/index.html
@@ -321,5 +321,23 @@
      <script src="/js/main.js"></script>
                         <script src="/js/jqBootstrapValidation.js"></script>
                     <script src="/js/contact_me.js"></script>
-            </body>
+             <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css" />
+    <script src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.js"></script>
+    <script>
+    window.addEventListener("load", function(){
+    window.cookieconsent.initialise({
+    "palette": {
+        "popup": {
+        "background": "#600B3D"
+        },
+        "button": {
+        "background": "#00aaff"
+        }
+    },
+    "content": {
+        "href": "/privacy/"
+    }
+    })});
+    </script>
+</body>
 </html>
