--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         <div class="row">
           <div class="col-xl-12 mx-auto">
             <h1 class="mb-5">Kent Based Tutor With 20 Years Experience</h1>
-            <a class="btn btn-primary btn-blue" href="#services">Request Tutor <span class="arrow">&gt;</span></a>
+            <a class="btn btn-primary btn-blue" href="/request-tutor/">Request Tutor <span class="arrow">&gt;</span></a>
           </div>
         </div>
       </div>
@@ -239,7 +239,7 @@
                             Complete the 'Request A Tutor' form or contact us either by email, through the 'Feedback' form or by telephone. This gives you the opportunity to ask any preliminary questions you may have.
                             </p>
                             </div>
-                            <a class="btn btn-primary btn-blue" href="#services">Contact Us <span class="arrow">&gt;</span></a>
+                            <a class="btn btn-primary btn-blue" href="/request-tutor/">Contact Us <span class="arrow">&gt;</span></a>
                          </div>
                          <div class="step">1</div>
                         </div>
@@ -258,7 +258,7 @@
                             It's important that both the Parent/ Carer and Student feel happy and confident with their Tutor, so we offer a free, no obligation, initial meeting. All needs and requirements/ worries and concerns can be discussed, as well as ensuring that the Student and Tutor are compatible.
                             </p>
                             </div>
-                            <a class="btn btn-primary btn-blue" href="#services">Arrange Meetup <span class="arrow">&gt;</span></a>
+                            <a class="btn btn-primary btn-blue" href="/request-tutor/">Arrange Meetup <span class="arrow">&gt;</span></a>
                              <div class="step">2</div>
                          </div>
                         </div>
@@ -277,7 +277,7 @@
                             If both you and your child are happy, you can then engage the Tutor by agreeing an available day, time and frequency of sessions that suits you. 
                             </p>
                             </div>
-                            <a class="btn btn-primary btn-blue" href="#services">Engage A Tutor <span class="arrow">&gt;</span></a>
+                            <a class="btn btn-primary btn-blue" href="/request-tutor/">Engage A Tutor <span class="arrow">&gt;</span></a>
                          </div>
                           <div class="step">3</div>
                         </div>
@@ -310,7 +310,7 @@
                     </ul>
                 </div>
               </div>
-            <a class="btn btn-primary btn-blue" href="#services">Learn More<span class="arrow">&gt;</span></a>
+            <a class="btn btn-primary btn-blue" href="/about/">Learn More<span class="arrow">&gt;</span></a>
            
             </article>
         </div>
@@ -372,5 +372,23 @@
     <script src="/vendor/jquery/jquery.min.js"></script>
     <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
      <script src="/js/main.js"></script>
-    </body>
+     <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css" />
+    <script src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.js"></script>
+    <script>
+    window.addEventListener("load", function(){
+    window.cookieconsent.initialise({
+    "palette": {
+        "popup": {
+        "background": "#600B3D"
+        },
+        "button": {
+        "background": "#00aaff"
+        }
+    },
+    "content": {
+        "href": "/privacy/"
+    }
+    })});
+    </script>
+</body>
 </html>
