--- a/terms-and-conditions/index.html
+++ b/terms-and-conditions/index.html
@@ -233,5 +233,23 @@
     <script src="/vendor/jquery/jquery.min.js"></script>
     <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
      <script src="/js/main.js"></script>
-    </body>
+     <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css" />
+    <script src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.js"></script>
+    <script>
+    window.addEventListener("load", function(){
+    window.cookieconsent.initialise({
+    "palette": {
+        "popup": {
+        "background": "#600B3D"
+        },
+        "button": {
+        "background": "#00aaff"
+        }
+    },
+    "content": {
+        "href": "/privacy/"
+    }
+    })});
+    </script>
+</body>
 </html>
