cookie consent link to privacy policy

--- a/about/index.html
+++ b/about/index.html
@@ -310,7 +310,7 @@ My daughter can be difficult to engage/encourage and has low self-esteem, with R
         }
     },
     "content": {
-        "href": "/privacy/"
+        "href": "/privacy-policy/"
     }
     })});
     </script>
