--- a/contact/index.html
+++ b/contact/index.html
@@ -335,7 +335,7 @@
         }
     },
     "content": {
-        "href": "/privacy/"
+        "href": "/privacy-policy/"
     }
     })});
     </script>
