--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
         }
     },
     "content": {
-        "href": "/privacy/"
+        "href": "/privacy-policy/"
     }
     })});
     </script>
