--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -264,7 +264,7 @@ We will not sell, distribute or lease your personal information to third parties
         }
     },
     "content": {
-        "href": "/privacy/"
+        "href": "/privacy-policy/"
     }
     })});
     </script>
