--- a/search-results/index.html
+++ b/search-results/index.html
@@ -253,7 +253,7 @@
         }
     },
     "content": {
-        "href": "/privacy/"
+        "href": "/privacy-policy/"
     }
     })});
     </script>
