--- a/terms-and-conditions/index.html
+++ b/terms-and-conditions/index.html
@@ -247,7 +247,7 @@
         }
     },
     "content": {
-        "href": "/privacy/"
+        "href": "/privacy-policy/"
     }
     })});
     </script>
