--- a/about/index.html
+++ b/about/index.html
@@ -47,15 +47,9 @@
     <link href="/css/page.css" rel="stylesheet">
     <link href="/css/home.css" rel="stylesheet">
     <link href="/css/search.css" rel="stylesheet">
-
     <link href="/css/forms.css" rel="stylesheet">
-    <!--
-    <link href="/css/base.css" rel="stylesheet">
-    <link href="/css/blog.css" rel="stylesheet">
-    <link href="/css/footer.css" rel="stylesheet">
-    <link href="/css/nav.css" rel="stylesheet">
-    -->
-    <!--<link href="/css/share.css" rel="stylesheet"> -->
+
+
 
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -440,7 +434,9 @@ My daughter can be difficult to engage/encourage and has low self-esteem, with R
 
     <script src="/vendor/jquery/jquery.min.js"></script>
     <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-     <script src="/js/main.js"></script>
+    <script src="/js/jqBootstrapValidation.js"></script>
+    <script src="/js/tutor_me.js"></script>
+    <script src="/js/main.js"></script>
      <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css" />
     <script src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.js"></script>
     <script>
