cookie consent color

--- a/terms-and-conditions/index.html
+++ b/terms-and-conditions/index.html
@@ -381,7 +381,7 @@
     window.cookieconsent.initialise({
     "palette": {
         "popup": {
-        "background": "#600B3D"
+        "background": "#284664"
         },
         "button": {
         "background": "#00aaff"
