--- a/about/index.html
+++ b/about/index.html
@@ -444,7 +444,7 @@ My daughter can be difficult to engage/encourage and has low self-esteem, with R
     window.cookieconsent.initialise({
     "palette": {
         "popup": {
-        "background": "#600B3D"
+        "background": "#284664"
         },
         "button": {
         "background": "#00aaff"
