--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -398,7 +398,7 @@ We will not sell, distribute or lease your personal information to third parties
     window.cookieconsent.initialise({
     "palette": {
         "popup": {
-        "background": "#600B3D"
+        "background": "#284664"
         },
         "button": {
         "background": "#00aaff"
