type in ball rolling section

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
              Tutor Interventions operate a student centred approach to tutoring. This involves a simple three-step process to begin the tutoring sessions.
              </p>
              <div class="row">
-                <div class="col-lg-4 col-md-4 col-sm-12 col-x2-12">
+                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                     <div class="col-inner">
                         <div class="icon-box">
                          <div class="icon">
@@ -241,7 +241,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-4 col-sm-12 col-x2-12">
+                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                     <div class="col-inner">
                         <div class="icon-box">
                          <div class="icon">
@@ -260,7 +260,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-4 col-sm-12 col-x2-12">
+                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                     <div class="col-inner">
                         <div class="icon-box">
                          <div class="icon">
