multiple fixes - navbar collapse, map overlay

--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -58,6 +58,7 @@
     <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
 <![endif]-->
 
+
 <script>
   (function() {
     var cx = '013979487175649159810:5dmpygjru_a';
@@ -113,7 +114,10 @@
              <span class="hidden">Tutor Interventions</span>
                 <img src="/img/logo-blue.png">
             </a>
-            <div class="collapse navbar-collapse">
+             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
                     <li class="nav-item active">
                         <a class="nav-link" href="/">Home</a>
@@ -385,6 +389,8 @@ We will not sell, distribute or lease your personal information to third parties
             </div>
         </div> 
     </div>
+
+
 
     <script src="/vendor/jquery/jquery.min.js"></script>
     <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
