colorscheme change - darker blue. Meta update

--- a/about/index.html
+++ b/about/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Welcome to Tutor Interventions in Kent. I’m Rachael Dyer and I set up Tutor Interventions to provide tutoring services for pupils in and around the Canterbury, East Kent area. I have over 20 years experience teaching children with varying levels of Special Needs, including, but not limited to:  Attention Deficit ...">
-    <meta name="keywords" content="Joe Blogs, developer, programmer, javascript, nodejs, node.js, blog">
-    <meta name="author" content="Joe Blogs">
+    <meta name="keywords" content="Rachael Dyer,teaching,teacher,tutoring,tutor,education,schools,schooling,11+,special needs">
+    <meta name="author" content="Rachael Dyer">
     <meta property="og:title" content="About Us">
     <meta property="og:description" content="Welcome to Tutor Interventions in Kent. I’m Rachael Dyer and I set up Tutor Interventions to provide tutoring services for pupils in and around the Canterbury, East Kent area. I have over 20 years experience teaching children with varying levels of Special Needs, including, but not limited to:  Attention Deficit ...">
     <meta property="og:image" content="/img/classmates-handsup-header.jpg">
-    <meta property="og:url" content="https://www.website.com/about">
+    <meta property="og:url" content="https://www.tutorinterventions.co.uk/about">
     
     <link rel="icon" href="/favicon.ico">
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
