--- a/contact/index.html
+++ b/contact/index.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Something about your website">
-    <meta name="keywords" content="Joe Blogs, developer, programmer, javascript, nodejs, node.js, blog">
-    <meta name="author" content="Joe Blogs">
+    <meta name="description" content="Kent based tutor with 20 Years experience teaching children with varying levels of special needs">
+    <meta name="keywords" content="Rachael Dyer,teaching,teacher,tutoring,tutor,education,schools,schooling,11+,special needs">
+    <meta name="author" content="Rachael Dyer">
     <meta property="og:title" content="Contact">
-    <meta property="og:description" content="Something about your website">
+    <meta property="og:description" content="Kent based tutor with 20 Years experience teaching children with varying levels of special needs">
     <meta property="og:image" content="/img/classmates-handsup-header.jpg">
-    <meta property="og:url" content="https://www.website.com/contact">
+    <meta property="og:url" content="https://www.tutorinterventions.co.uk/contact">
     
     <link rel="icon" href="/favicon.ico">
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
@@ -59,17 +59,20 @@
 <![endif]-->
     <script>
         var map;
+        var centerLL =  {lat: 51.278191, lng: 1.0810};
         function initMap() {
             map = new google.maps.Map(document.getElementById('map'), {
-            center: {lat: 51.2802, lng: 1.0789},
+            center: centerLL,
             zoom: 14,
             scrollwheel: false
             });
             google.maps.event.addListenerOnce(map, 'tilesloaded', function(){
-                 console.log("tiles loaded")
                  $('.map-overlay').fadeOut(1000,function(){
-                     $(this).addClass("hidden");
-    
+                    var marker = new google.maps.Marker({
+                        position: centerLL,
+                        map: map,
+                        animation: google.maps.Animation.DROP
+                    });
                  })
             });
         }
