--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Something about your website">
-    <meta name="keywords" content="Joe Blogs, developer, programmer, javascript, nodejs, node.js, blog">
-    <meta name="author" content="Joe Blogs">
+    <meta name="description" content="Kent based tutor with 20 Years experience teaching children with varying levels of special needs">
+    <meta name="keywords" content="Rachael Dyer,teaching,teacher,tutoring,tutor,education,schools,schooling,11+,special needs">
+    <meta name="author" content="Rachael Dyer">
     <meta property="og:title" content="Tutor Interventions">
-    <meta property="og:description" content="Something about your website">
+    <meta property="og:description" content="Kent based tutor with 20 Years experience teaching children with varying levels of special needs">
     <meta property="og:image" content="/img/classmates-handsup.jpg">
-    <meta property="og:url" content="https://www.website.com/">
+    <meta property="og:url" content="https://www.tutorinterventions.co.uk/">
     
     <link rel="icon" href="/favicon.ico">
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
