--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="This privacy policy sets out how Tutor Interventions uses and protects any information that you give Tutor Interventions when you use this website. Tutor Interventions is committed to ensuring that your privacy is protected. Should we ask you to provide certain information by which you can be identified when using ...">
-    <meta name="keywords" content="Joe Blogs, developer, programmer, javascript, nodejs, node.js, blog">
-    <meta name="author" content="Joe Blogs">
+    <meta name="keywords" content="Rachael Dyer,teaching,teacher,tutoring,tutor,education,schools,schooling,11+,special needs">
+    <meta name="author" content="Rachael Dyer">
     <meta property="og:title" content="Privacy Policy">
     <meta property="og:description" content="This privacy policy sets out how Tutor Interventions uses and protects any information that you give Tutor Interventions when you use this website. Tutor Interventions is committed to ensuring that your privacy is protected. Should we ask you to provide certain information by which you can be identified when using ...">
     <meta property="og:image" content="/img/classmates-handsup-header.jpg">
-    <meta property="og:url" content="https://www.website.com/privacy-policy">
+    <meta property="og:url" content="https://www.tutorinterventions.co.uk/privacy-policy">
     
     <link rel="icon" href="/favicon.ico">
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
