--- a/search-results/index.html
+++ b/search-results/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="  ">
-    <meta name="keywords" content="Joe Blogs, developer, programmer, javascript, nodejs, node.js, blog">
-    <meta name="author" content="Joe Blogs">
+    <meta name="keywords" content="Rachael Dyer,teaching,teacher,tutoring,tutor,education,schools,schooling,11+,special needs">
+    <meta name="author" content="Rachael Dyer">
     <meta property="og:title" content="Search Results">
     <meta property="og:description" content="  ">
     <meta property="og:image" content="/img/classmates-handsup-header.jpg">
-    <meta property="og:url" content="https://www.website.com/search-results">
+    <meta property="og:url" content="https://www.tutorinterventions.co.uk/search-results">
     
     <link rel="icon" href="/favicon.ico">
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
