fixes for form success message

--- a/about/index.html
+++ b/about/index.html
@@ -426,12 +426,13 @@ My daughter can be difficult to engage/encourage and has low self-esteem, with R
                 
                 <div class="form-row">
                     <div class="col">
-                    <div id="success"></div>
-                            <div class="form-group feature">
-                                <button type="submit" class="btn btn-primary btn-blue" id="sendMessageButton">Send
-                                    <span class="arrow">&gt;</span>
-                                </button>
-                            </div>
+                        <div id="success">
+                        </div>
+                        <div class="form-group feature">
+                            <button type="submit" class="btn btn-primary btn-blue" id="sendMessageButton">Send
+                                <span class="arrow">&gt;</span>
+                            </button>
+                        </div>
                     </div>
                 </div>
             </form>
