--- a/request-tutor/index.html
+++ b/request-tutor/index.html
@@ -227,10 +227,11 @@
                         <div class="control-group">
                             <div class="form-group controls">
                                 <label>Extra Details</label>
-                                <textarea rows="5" class="form-control" placeholder="Be sure to tell the tutor what you are looking for. Include:
-                                - What age and level is the learner?
-                                - Why you are seeking a tutor.... for exams, an essay or for the fun of learning?
-                                - When and where you would like lessons?" id="message" required data-validation-required-message="Please enter a message."></textarea>
+                                <textarea rows="5" class="form-control" 
+                                placeholder="Things you might want to inclide here are:
+                                The age of the student and their level or learning?
+                                Are you engaging a tutor for specific exams or for specific learning needs?
+                                Times and dates you would like to engage a tutor." id="message" required data-validation-required-message="Please enter a message."></textarea>
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
@@ -422,10 +423,11 @@
                         <div class="control-group">
                             <div class="form-group controls">
                                 <label>Extra Details</label>
-                                <textarea rows="5" class="form-control" placeholder="Be sure to tell the tutor what you are looking for. Include:
-                                - What age and level is the learner?
-                                - Why you are seeking a tutor.... for exams, an essay or for the fun of learning?
-                                - When and where you would like lessons?" id="message" required data-validation-required-message="Please enter a message."></textarea>
+                                <textarea rows="5" class="form-control" 
+                                placeholder="Things you might want to inclide here are:
+                                The age of the student and their level or learning?
+                                Are you engaging a tutor for specific exams or for specific learning needs?
+                                Times and dates you would like to engage a tutor." id="message" required data-validation-required-message="Please enter a message."></textarea>
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
