more mission edits

--- a/mission/index.html
+++ b/mission/index.html
@@ -1,10 +1,10 @@
-<p>Tutor Interventions came to fruition in April 2018, because I wanted to spend my time teaching students who needed support, as opposed to other increasing demands placed upon a teacher within a school environment. Building positive relationships with students is important! Making progress and moving towards mastery for the students benefit, not for statistics or shareholders.</p>
-<p>Each session is spent focusing on the student’s needs and requirements, using a multi-sensory approach and a variety of strategies and resources. These can include the use of games, puzzles and the online learning spaces – <a href="http://uk.mathletics.com/">Mathletics</a> and <a href="http://uk.spellodrome.com/#/home">Spellodrome</a>.</p>
+<p>Tutor Interventions came to fruition in April 2018, because I wanted to spend my time teaching students who needed support, as opposed to other increasing demands placed upon a teacher within a school environment. Building positive relationships with students is important! Making progress and moving towards mastery for the student&#39;s benefit, not for statistics or shareholders.</p>
+<p>Each session is spent focusing on the student&#39;s needs and requirements, using a multi-sensory approach and a variety of strategies and resources. These can include the use of games, puzzles and the online learning spaces – <a href="http://uk.mathletics.com/">Mathletics</a> and <a href="http://uk.spellodrome.com/#/home">Spellodrome</a>.</p>
 <ul>
-<li>Tutor Interventions provides tuition in a calm and stress free environment – the student’s home.</li>
+<li>Tutor Interventions provides tuition in a calm and stress free environment – the student&#39;s home.</li>
 <li>Tutor Interventions provide a one to one student centred approach.</li>
 <li>Tutor Interventions focuses on using a &#39;multi-sensory&#39; approach to learning.</li>
-<li>Tutor Interventions helps to encourage a positive mindset and is mindful of the student’s health and wellbeing.</li>
+<li>Tutor Interventions helps to encourage a positive mindset and is mindful of the student&#39;s health and wellbeing.</li>
 <li>Tutor Interventions endeavours to make learning fun again.</li>
 <li>Tutor Interventions allows a safe space for students to make mistakes without feeling embarrassed.</li>
 <li>Tutor Interventions helps students to go from “I find this tricky” to “I can do it”.</li>
