--- a/about/index.html
+++ b/about/index.html
@@ -188,14 +188,14 @@
 <li>Geography, History, PSHE, RE, Citizenship, Life Skills, Art &amp; Design</li>
 </ul>
 <p><strong>The ages I tutor range from 5 yrs – 17 yrs.</strong></p>
-<p>I am used to implementing short-term interventions as directed by pupil’s:</p>
-<p>Education,Health &amp; Care Plan (EHCP), Personal Education Plan (PEP), Provision Map and the Pupil Premium.</p>
+<p>I am used to implementing short-term interventions as directed by pupils:</p>
+<p>Education, Health &amp; Care Plan (EHCP), Personal Education Plan (PEP), Provision Map and the Pupil Premium.</p>
 <p><strong>I can support and encourage pupils:</strong></p>
 <ul>
 <li>To close the gap</li>
 <li>To catch up on basic skills</li>
 <li>To build and embed fluency and confidence for exams and tests</li>
-<li>To accelerate progress, attainment, and achievement</li>
+<li>To accelerate progress, attainment and achievement</li>
 <li>To develop a positive mindset and become confident and willing independent learners</li>
 <li>To gain mastery in concepts and to make progress at their own pace</li>
 <li>To achieve their full potential</li>
