--- a/about/index.html
+++ b/about/index.html
@@ -215,16 +215,16 @@
                 <article class="post bulleted">
                     <h2>Mission</h2>
                     <div class="seperator left"></div>
-                    <p>Tutor Interventions came to fruition in April 2018, because I wanted to spend my time teaching Students who needed support, as opposed to other increasing demands placed upon a teacher within a school environment. Building positive relationships with students is important! Making progress and moving towards mastery for the Students benefit, not for statistics or shareholders.</p>
-<p>Each session is spent focusing on the Student’s needs and requirements, using a multi-sensory approach and a variety of strategies and resources. These can include the use of games, puzzles and the online learning spaces – Mathletics and Spellodrome.</p>
+                    <p>Tutor Interventions came to fruition in April 2018, because I wanted to spend my time teaching students who needed support, as opposed to other increasing demands placed upon a teacher within a school environment. Building positive relationships with students is important! Making progress and moving towards mastery for the student&#39;s benefit, not for statistics or shareholders.</p>
+<p>Each session is spent focusing on the student&#39;s needs and requirements, using a multi-sensory approach and a variety of strategies and resources. These can include the use of games, puzzles and the online learning spaces – <a href="http://uk.mathletics.com/">Mathletics</a> and <a href="http://uk.spellodrome.com/#/home">Spellodrome</a>.</p>
 <ul>
-<li>Tutor Interventions provides tuition in a calm and stressfree environment – the Student’s home.</li>
-<li>Tutor Interventions provide a one to one Student centred approach.</li>
-<li>Tutor Interventions focuses on using a Multi-Sensory approach to learning.</li>
-<li>Tutor Interventions helps to encourage a positive mindset and is mindful of the Student’s health and wellbeing.</li>
+<li>Tutor Interventions provides tuition in a calm and stress free environment – the student&#39;s home.</li>
+<li>Tutor Interventions provide a one to one student centred approach.</li>
+<li>Tutor Interventions focuses on using a &#39;multi-sensory&#39; approach to learning.</li>
+<li>Tutor Interventions helps to encourage a positive mindset and is mindful of the student&#39;s health and wellbeing.</li>
 <li>Tutor Interventions endeavours to make learning fun again.</li>
-<li>Tutor Interventions allows a safe space for Students to make mistakes without feeling embarrassed.</li>
-<li>Tutor Interventions helps Students to go from “I find this tricky” to “I can do it”.</li>
+<li>Tutor Interventions allows a safe space for students to make mistakes without feeling embarrassed.</li>
+<li>Tutor Interventions helps students to go from “I find this tricky” to “I can do it”.</li>
 </ul>
                 </article>
             </div>
@@ -371,7 +371,7 @@ My daughter can be difficult to engage/encourage and has low self-esteem, with R
                             <div class="form-group controls">
                                 <label>Extra Details</label>
                                 <textarea rows="5" class="form-control" 
-                                placeholder="Things you might want to inclide here are:
+                                placeholder="Things you might want to include here are:
                                 The age of the student and their level or learning?
                                 Are you engaging a tutor for specific exams or for specific learning needs?
                                 Times and dates you would like to engage a tutor." id="message" required data-validation-required-message="Please enter a message."></textarea>
