--- a/search-results/index.html
+++ b/search-results/index.html
@@ -310,7 +310,7 @@
                             <div class="form-group controls">
                                 <label>Extra Details</label>
                                 <textarea rows="5" class="form-control" 
-                                placeholder="Things you might want to inclide here are:
+                                placeholder="Things you might want to include here are:
                                 The age of the student and their level or learning?
                                 Are you engaging a tutor for specific exams or for specific learning needs?
                                 Times and dates you would like to engage a tutor." id="message" required data-validation-required-message="Please enter a message."></textarea>
